Fix small inconsistency in spacing of the leaders
It seems like the dots had one character of spacing on the right, but didn't have that on the left. This is now fixed.

--- a/themes/monospace-web/assets/scss/_tableofcontents.scss
+++ b/themes/monospace-web/assets/scss/_tableofcontents.scss
@@ -41,6 +41,7 @@
 }
 
 .toc-list li > a .leaders::after {
+    margin-left: 1ch;
     position: absolute;
     padding-inline-start: .25ch;
     counter-reset: dots 120;
